--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "chi-events": "0.0.4",
     "chi-classes": "0.0.3",
-    "hut-base": "0.0.2"
+    "hut-base": "0.0.2",
+    "mout": "~0.7.1"
   }
 }
