--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chi-events": "0.0.4",
     "chi-classes": "0.0.3",
     "hut-base": "0.0.2",
-    "mout": "~0.7.1"
+    "mout": "~0.7.1",
+    "emitter-component": "~1.0.1"
   }
 }
