--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "url": "https://github.com/conradz/hut-accordion/issues"
   },
   "devDependencies": {
-    "tape": "~1.1.0",
+    "tape": "~2.1.0",
     "hut-build": "~0.2.0",
     "chi-create": "0.0.2"
   },
   "dependencies": {
-    "chi-events": "0.1.0",
+    "chi-events": "~0.1.0",
     "chi-classes": "0.0.4",
     "hut-base": "0.0.2",
     "mout": "~0.7.1",
