--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "example/build"]
 	path = example/build
 	url = https://github.com/conradz/hut-accordion.git
+[submodule "build"]
+	path = build
+	url = git@github.com:conradz/hut-accordion.git
