--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "url": "https://github.com/conradz/hut-accordion/issues"
   },
   "devDependencies": {
-    "tape": "~2.1.0",
-    "hut-build": "~0.2.0",
-    "chi-create": "0.0.2"
+    "tape": "~2.3.0",
+    "hut-build": "~0.3.0",
+    "chi-create": "~0.1.0"
   },
   "dependencies": {
     "chi-events": "~0.1.0",
-    "chi-classes": "0.0.4",
-    "hut-base": "0.0.3",
+    "chi-classes": "~0.1.0",
+    "hut-base": "~0.2.0",
     "mout": "~0.8.0",
     "emitter-component": "~1.1.0"
   }
